--- a/index.html
+++ b/index.html
@@ -95,6 +95,67 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Our Portfolio</h2>
+
+        <ul>
+          <li>
+            <img
+              src="./images/port1.jpg"
+              alt="banking"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/port2.jpg"
+              alt="Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/port3.jpg"
+              alt="Meditation"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/port4.jpg" alt="Taxi" width="360" height="300" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/port5.jpg"
+              alt="Screen"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/port6.jpg"
+              alt="Courses"
+              width="360"
+              height="300"
+            />
+          </li>
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
