--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="theme">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
