--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">Web<span>Studio</span></a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -159,8 +159,8 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo2" href="./index.html">WebStudio</a>
+      <p class="cringe">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
