--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="first-section">
         <h1 class="theme">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
