--- a/index.html
+++ b/index.html
@@ -99,26 +99,22 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-list-item">
-            <img src="./images/imgg1.jpg" alt="man photo smiling" width="264" />
+            <img src="./images/imgg1.jpg" alt="Mark" width="264" />
             <h3 class="team-item-title">Mark Guerrero</h3>
             <p class="team-item-text">Product Designer</p>
           </li>
           <li class="team-list-item">
-            <img src="./images/imgg2.jpg" alt="man photo smiling" width="264" />
+            <img src="./images/imgg2.jpg" alt="Tom" width="264" />
             <h3 class="team-item-title">Tom Ford</h3>
             <p class="team-item-text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
-            <img
-              src="./images/imgg3.jpg"
-              alt="woman photo smiling"
-              width="264"
-            />
+            <img src="./images/imgg3.jpg" alt="Camila" width="264" />
             <h3 class="team-item-title">Camila Garcia</h3>
             <p class="team-item-text">Marketing</p>
           </li>
           <li class="team-list-item">
-            <img src="./images/imgg4.jpg" alt="man photo smiling" width="264" />
+            <img src="./images/imgg4.jpg" alt="Daniel" width="264" />
             <h3 class="team-item-title">Daniel Wilson</h3>
             <p class="team-item-text">UI Designer</p>
           </li>
